<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <RadioGroup
        android:id="@+id/rgTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50585d"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbHome"
            style="@style/MainTab"
            android:drawableTop="@drawable/selector_main_tab_home"
            android:text="@string/home"/>

        <RadioButton
            android:id="@+id/rbChat"
            style="@style/MainTab"
            android:drawableTop="@drawable/selector_main_tab_chat"
            android:text="@string/chat"/>

        <RadioButton
            android:id="@+id/rbDiscover"
            style="@style/MainTab"
            android:drawableTop="@drawable/selector_main_tab_discover"
            android:text="@string/discover"/>

        <RadioButton
            android:id="@+id/rbMe"
            style="@style/MainTab"
            android:drawableTop="@drawable/selector_main_tab_me"
            android:text="@string/me"/>
    </RadioGroup>


</LinearLayout>