<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="meModel"
            type="com.jucongyuan.databindingdemo.viewmodels.MeModel"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeef"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/sdvAvatar"
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_centerHorizontal="true"
                        app:roundedCornerRadius="4dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sdvAvatar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:text="@{meModel.user.nikeName}"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"/>


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="90dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/certified_member"
                            android:textColor="#f1871c"
                            android:textSize="12sp"
                            android:visibility="@{meModel.user.authenticate ? View.VISIBLE : View.GONE}"/>


                        <TextView
                            android:id="@+id/tvIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text='@{meModel.user.income + "元"}'
                            android:textColor="#f1871c"
                            android:textSize="12sp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@id/tvIncome"
                            android:layout_toStartOf="@id/tvIncome"
                            android:text="@string/income"
                            android:textColor="#50585d"
                            android:textSize="12sp"/>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follow"
                            android:textColor="#50585d"
                            android:textSize="12sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginStart="30dp"
                            android:text='@{meModel.user.fansNum + ""}'
                            android:textColor="#f1871c"
                            android:textSize="12sp"/>


                        <TextView
                            android:id="@+id/tvBrowseNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text='@{meModel.user.browseNum + "次"}'
                            android:textColor="#f1871c"
                            android:textSize="12sp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@id/tvBrowseNum"
                            android:layout_toStartOf="@id/tvBrowseNum"
                            android:text="@string/browse"
                            android:textColor="#50585d"
                            android:textSize="12sp"/>

                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@{meModel.user.address}"
                        android:textColor="#50585d"
                        android:textSize="12sp"/>

                </LinearLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#dcdddd"
                    android:text="@string/into_homepage"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:background="#dcdddd"
                    android:text="@string/homepage_setting"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/follow_manager"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/question_manager"
                    android:textColor="#474543"
                    android:textSize="14sp"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/comment_reply"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/account_setting"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/order_manager"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/authenticate_manager"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/case_manager"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/wallet"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/favorite_articles"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/spread"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/help"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/shape_f05452_bg"
                android:onClick="@{()-> meModel.logoutClick()}"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>


        </LinearLayout>


    </ScrollView>
</layout>