<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="answerer"
            type="com.jucongyuan.databindingdemo.models.Answerer"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@android:color/white">


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdvAvatar"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            app:roundAsCircle="true"/>

        <TextView
            android:layout_width="32dp"
            android:layout_height="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_ef8619_bg"
            android:gravity="center"
            android:text="@{answerer.status}"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/sdvAvatar"
            android:layout_toRightOf="@id/sdvAvatar"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{answerer.nikeName}"
                    android:textColor="#474543"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text='@{"「" + answerer.sex +"」" }'
                    android:textColor="#4bb13f"
                    android:textSize="14sp"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{answerer.address}"
                android:textColor="#8b8b8b"
                android:textSize="14sp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textColor="#8b8b8b"
                    android:textSize="12sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:text="@{String.valueOf(answerer.fansNum)}"
                    android:textColor="#f1871c"
                    android:textSize="14sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/browse"
                    android:textColor="#8b8b8b"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@{String.valueOf(answerer.browseNum)}"
                    android:textColor="#f1871c"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:background="@drawable/shape_35ae42_bg"
                    android:gravity="center"
                    android:text="@string/authenticate"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="@{answerer.authenticate ? View.VISIBLE : View.GONE}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{answerer.title}"
                    android:textColor="#56aab7"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#a4a4a4"/>

    </RelativeLayout>


</layout>